# modern-cmake-sample

./: CMakeLists.txt  LICENSE  README.md
hellogoodbyeapp/: CMakeLists.txt  main.cpp
libs/libgoodbye/: CMakeLists.txt  goodbye.cpp  goodbye.h
libs/libhello/: CMakeLists.txt  hello.cpp  hello.h
tests/libgoodbyetest/: CMakeLists.txt  main.cpp
tests/libhellotest/: CMakeLists.txt  main.cpp
